force-app/main/default/objects/System_Variable__c/System_Variable__c.object-meta.xml
<CustomObject>
    <description>To store system values such as running number.</description>
    <label>System Variable</label>
    <nameField>
        <label>System Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Variables</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>