force-app/main/default/objects/System_Variable__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <description>The format of the value e.g., the {00000} portion will be replaced with the value of the Number field.</description>
    <inlineHelpText>The format of the value e.g., the {00000} portion will be replaced with the value of the Number field.</inlineHelpText>
    <label>Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>