force-app/main/default/objects/System_Variable__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represent number value.</description>
    <inlineHelpText>Represent number value.</inlineHelpText>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>