force-app/main/default/objects/System_Variable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Format__c</columns>
    <columns>Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>